--- a/translations/stand_united.tex/fr.po
+++ b/translations/stand_united.tex/fr.po
@@ -193,7 +193,7 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Stand United}{\\images/"
 "interference.png}"
 msgstr ""
-"\\addscenariosection{1}{Scénario Coopératif}{Stand United}{\\images/"
+"\\addscenariosection{1}{Scénario Coopératif}{Fronts Unis}{\\images/"
 "interference.png}"
 
 #. type: multicols
@@ -365,7 +365,7 @@ msgid ""
 "If at least one player has failed to defeat the Dragon Utopia by the end of Round 9, the Scenario is lost.\n"
 "\n"
 msgstr ""
-"Si au moins un Joueur n'a pas gagné le combat dans les Terres Désolées à la fin de la Manche 9.\n"
+"Si au moins un Joueur n'a pas gagné le combat dans les Terres Désolées à la fin de la Manche~9.\n"
 "\n"
 
 #. type: multicols
@@ -424,7 +424,7 @@ msgstr ""
 "  \\item Le Combat Niveaux VII ne peut être évité par Diplomatie ou d'autres moyens.\n"
 "  \\item Un Joueur peut utiliser son Jeton Construction pour échanger avec un autre Joueur. Les deux Joueurs échangent librement des Ressources, des Sorts et Artefacts comme si leurs Héros étaient adjacents.\n"
 "  \\item Les Joueurs vont créer une armée partagée. Chaque Joueur peut jouer les Unités de l'armée partagée pendant les Combats (les capacités \\svg{map} des Unités partagées ne peuvent être activées à chaque Manche que par un Joueur).  % no-check-caps\n"
-"  \\item Lors de la Visite d'un Obélisque, défaussez la 1$^{ère}$ Carte des Decks d'Unités Neutres sauf \\azure\\. Vous pouvez Recruter une de ces Unités. Les Unités ainsi Recrutées vont dans l'armée partagée.\n"
+"  \\item Lors de la Visite d'un Obélisque, défaussez la 1$^{ère}$ Carte des Decks d'Unités Neutres sauf \\azure{}. Vous pouvez Recruter une de ces Unités. Les Unités ainsi Recrutées vont dans l'armée partagée.\n"
 "  \\item Lors du Combat dans les Terres Désolées, un des Unités \\azure\\ est toujours le Dragon Azure et l'Armée Neutre utilise le Deck IA. Remélangez le Deck IA et Sorts IA à la fin du Combat.\n"
 "  \\item Après victoire aux Terres Désolées, aucun Cube de Faction n'est placé sur la case. Le Joueur victorieux place une Unité de Faction survivante dans l'armée partagée et peut redistribuer ses Ressources restantes entre les autres Joueurs, puis ce Joueur est retiré du jeu.\n"
 "\\end{itemize}\n"
@@ -464,8 +464,8 @@ msgstr ""
 "    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/cove_part.png}\n"
 "  };\n"
 "  \\centering\n"
-"  \\node at (13.5, 1.5) {\\includegraphics[scale=0.3]{\\maps/stand_united_3p.png}};\n"
-"  \\node at (13.5, -2.8) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIO 3-JOUEURS}}}};\n"
+"  \\node at (13.5, 3.0) {\\includegraphics[scale=0.3]{\\maps/stand_united_3p.png}};\n"
+"  \\node at (13.5, -1.2) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIO 3-JOUEURS}}}};\n"
 "\n"
 
 #. type: tikzpicture
