--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -432,9 +432,9 @@ msgstr ""
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Sacrifier]} Retirez une Unité de Faction * depuis votre Deck d'Unité pour:\n"
 "    \\begin{enumerate}\n"
-"      \\item Gagner *\\bronze\\:  6 \\svg{gold}, 3 \\svg{building_materials}, et 1 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (4)} le Deck Artefact Mineur.\n"
-"      \\item Gagner *\\silver\\: 12 \\svg{gold}, 6 \\svg{building_materials}, et 2 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (3)} le Deck Artefact Majeur.\n"
-"      \\item Gagner *\\golden\\: 18 \\svg{gold}, 9 \\svg{building_materials}, et 3 \\svg{valuables}. De plus, \\textbf{Fouillez (2)} le Deck Relique. Enfin, si l'Unité est sur la face Groupe, \\textbf{Fouillez (2)} le Deck d'Unité \\azure\\; vous pouvez en recruter une pour la moitié du coût (arrondi à l'inférieur).\n"
+"      \\item Gagner *\\bronze{}:  6 \\svg{gold}, 3 \\svg{building_materials}, et 1 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (4)} le Deck Artefact Mineur.\n"
+"      \\item Gagner *\\silver{}: 12 \\svg{gold}, 6 \\svg{building_materials}, et 2 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (3)} le Deck Artefact Majeur.\n"
+"      \\item Gagner *\\golden{}: 18 \\svg{gold}, 9 \\svg{building_materials}, et 3 \\svg{valuables}. De plus, \\textbf{Fouillez (2)} le Deck Relique. Enfin, si l'Unité est sur la face Groupe, \\textbf{Fouillez (2)} le Deck d'Unité \\azure{}; vous pouvez en recruter une pour la moitié du coût (arrondi à l'inférieur).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
 "  \\item Un Joueur qui choisit \\textbf{Sacrifier} gagne le titre «\\textcolor{darkcandyapplered}{Chevalier Sanglant}». Placez un Cube de Faction rouge sur le portrait du Héros pour indiquer cet effet. Un\\textcolor{darkcandyapplered}{Chevalier Sanglant} ne peut jamais \\textbf{Purifier} en visitant un Obélisque.\n"
@@ -444,7 +444,7 @@ msgstr ""
 "  \\item Si une Unité Recrutée à un Obélisque est battu, retirez-la du jeu.\n"
 "\\columnbreak\n"
 "  \\item Un Joueur sans titre ou avec le titre «\\textcolor{darkcandyapplered}{Chevalier Sanglant}» ne peut pas utiliser la Carte Diplomatie. Si un Joueur sans titre ou avec le titre «\\textcolor{darkcandyapplered}{Chevalier Sanglant}» pioche Diplomatie, il peut la révéler, la défausser et pioche une autre Compétence à la place.\n"
-"  \\item Un Joueur avec le titre «\\textcolor{cobalt}{Chevalier du Graal}» ne peut pas utiliser Diplomatie pour Recruter une Unité Neutre \\azure\\.\n"
+"  \\item Un Joueur avec le titre «\\textcolor{cobalt}{Chevalier du Graal}» ne peut pas utiliser Diplomatie pour Recruter une Unité Neutre \\azure{}.\n"
 "  \\item Quand une Proclamation des Astrologues ou une Carte Événement qui permet de Recruter une Unité Neutre est piochée, ignorez-la et pioches en une nouvelle.\n"
 "  \\item Un Joueur peut utiliser son Deck de Might \\& Magic en payant pour défendre sa Ville de Faction.\n"
 "  \\item Ignorez les Combats sur la case du Graal.\n"
