--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -65,11 +65,30 @@ msgstr ""
 #: coops/stand_united.tex:31 clash/bloody_grail.tex:29
 #: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #: clash/the_fractured_kingdoms.tex:26
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Bâtiments de Départ :} Demeure \\bronze\\\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
+"\n"
+"#-#-#-#-#  fr.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
 "\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
 "\n"
 
@@ -90,24 +109,26 @@ msgstr ""
 #. type: multicols
 #: clash/bloody_grail.tex:34 clash/force_of_will.tex:38
 #: clash/the_fractured_kingdoms.tex:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Prenez les tuiles suivantes et disposez-les comme indiqué sur le schéma du scénario ($J$ représente le nombre de joueurs):\n"
+"\\subsection*{\\MakeUppercase{Préparation du Plateau}}\n"
+"Prenez les Tuiles suivantes et placez-les comme indiqué dans les images de la Préparation du Plateau:\n"
 "\n"
 
 #. type: multicols
 #: clash/bloody_grail.tex:73 clash/the_fractured_kingdoms.tex:53
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "Before this Scenario:\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Conditions de Défaite}}\n"
+"\\subsection*{\\MakeUppercase{Règles Additionnelles}}\n"
+"Avant ce Scénario:\n"
 "\n"
 
 #. type: multicols
@@ -118,6 +139,8 @@ msgid ""
 "During this Scenario:\n"
 "\n"
 msgstr ""
+"Pendant ce Scénario:\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
