Unwind the layout

--- a/translations/castle_sicilian_dragon.tex/de.po
+++ b/translations/castle_sicilian_dragon.tex/de.po
@@ -812,3 +812,8 @@ msgid ""
 "\\end{center}\n"
 "\n"
 msgstr ""
+"\\vspace{-2em}\n"
+"\\begin{center}\n"
+"  \\framedimage[0.75\\linewidth]{\\art/necropolis_town.jpg}\n"
+"\\end{center}\n"
+"\n"
