--- a/translations/trial_by_combat.tex/de.po
+++ b/translations/trial_by_combat.tex/de.po
@@ -285,6 +285,35 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
+"\\vspace*{-5em}\n"
+"\\hommtablemulticol[]{33}{\n"
+"  \\centering\n"
+"  \\medskip\n"
+"  \\textbf{Battlefield Conditions}\\\\\n"
+"  \\medskip\n"
+"\n"
+"  \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX}\\\\\n"
+"  \\darkcell[1.4]{-1/-1}\n"
+"    & \\lightcell[1.4]{Dense Fog – All \\svg{unit_ranged-table} Units gain disadvantage.}\\\\\n"
+"  \\darkcell[1.4]{-1/0}\n"
+"    & \\lightcell[1.4]{Raining Ash – All \\svg{unit_flying-table} Units gain -2 \\svg{initiative-table}.}\\\\\n"
+"  \\darkcell[1.4]{-1/+1}\n"
+"    & \\lightcell[1.4]{Scorching Earth – All \\silver\\ and \\golden\\ Units start Combat with 1 \\svg{damage-table}.}\\\\\n"
+"  \\darkcell[1.4]{0/-1}\n"
+"    & \\lightcell[1.4]{Sinking Mud – All \\svg{unit_ground-table} Units move one space less.}\\\\\n"
+"  \\darkcell[1.4]{0/0}\n"
+"    & \\lightcell[1.4]{Clear Skies – No effect.}\\\\\n"
+"  \\darkcell[1.4]{0/+1}\n"
+"    & \\lightcell[1.4]{Rocky Terrain – All \\svg{unit_ground-table} Units gain \\svg{defense_yellow} Token.}\\\\\n"
+"  \\darkcell[1.8]{+1/-1}\n"
+"    & \\lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\\\\n"
+"  \\darkcell[1.4]{+1/0}\n"
+"    & \\lightcell[1.4]{Tail Wind – \\svg{unit_flying-table} Units gain +1 Movement.}\\\\\n"
+"  \\darkcell[1.4]{+1/+1}\n"
+"    & \\lightcell[1.4]{Perfect Conditions – All \\svg{unit_ranged-table} Units gain advantage.}\\\\\n"
+"  \\end{tabularx}\n"
+"}\n"
+"\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:112
