--- a/translations/what_to_play.tex/de.po
+++ b/translations/what_to_play.tex/de.po
@@ -163,4 +163,4 @@ msgstr ""
 #. type: Plain text
 #: sections/what_to_play.tex:33
 msgid "\\iftoggle{printable}{ \\enlargethispage{2\\baselineskip} }{}"
-msgstr ""
+msgstr "\\enlargethispage{5\\baselineskip}"
