--- a/translations/the_hunt.tex/de.po
+++ b/translations/the_hunt.tex/de.po
@@ -7,14 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2025-06-22 00:57+0200\n"
-"PO-Revision-Date: 2025-04-01 12:55+0000\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-06-23 13:01+0000\n"
+"Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
+"Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
+"mission-book/clash-scenarios/the_hunt/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.13-dev\n"
 
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -40,6 +42,8 @@ msgid ""
 "{2}\n"
 "\n"
 msgstr ""
+"{2}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:26 coops/titans_stronghold.tex:28
@@ -50,6 +54,8 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Starteinkommen:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:32 clash/the_hunt.tex:29
@@ -62,6 +68,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Starteinheiten:}\n"
+"\\begin{itemize}\n"
+"  \\item 1 \\bronze\\-Einheit mit den \\textit{niedrigsten} Rekrutierungskosten auf der \"Rudel\"-Seite\n"
+"  \\item 1 \\bronze\\-Einheit mit den \\textit{höchsten} Rekrutierungskosten auf der \"Wenige\"-Seite\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:42 coops/titans_stronghold.tex:44
@@ -75,6 +87,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Vorbereitung der Abenteuerkarte}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
@@ -90,6 +104,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Besondere Ereignisse}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:85 coops/emerald_island.tex:60
@@ -104,6 +120,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Zusätzliche Regeln}}\n"
+"\n"
 
 #. type: multicols*
 #: clash/force_of_will.tex:20 clash/the_hunt.tex:19
@@ -113,6 +131,9 @@ msgid ""
 "\\textbf{Player Count:} 2 or 3\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
+"\\textbf{Fraktionsanzahl:} 2 oder 3\n"
+"\n"
 
 #. type: multicols*
 #: clash/force_of_will.tex:33 clash/the_hunt.tex:33
@@ -121,12 +142,14 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile\n"
 "\n"
 msgstr ""
+"\\textbf{Kartenteilvorrat:} Jede Fraktion erhält 1 zufälligtes Fernes (II--III) Gebiet\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: clash/the_hunt.tex:3
 msgid "\\addscenariosection{1}{Clash Scenario}{The Hunt}{\\images/slayer.png}"
-msgstr ""
+msgstr "\\addscenariosection{1}{Konfliktmodus}{Die Jagd}{\\images/slayer.png}"
 
 #. type: multicols*
 #: clash/the_hunt.tex:7
@@ -135,6 +158,8 @@ msgid ""
 "\\textbf{Author:} Mateusz ``MATMOT'' Motyka\n"
 "\n"
 msgstr ""
+"\\textbf{Autor:} Mateusz ``MATMOT'' Motyka\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:9
@@ -143,6 +168,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://boardgamegeek.com/filepage/277736/clash-scenario-the-hunt-v10}{BoardGameGeek}\n"
 "\n"
 msgstr ""
+"\\textbf{Quelle:} \\href{https://boardgamegeek.com/filepage/277736/clash-scenario-the-hunt-v10}{BoardGameGeek}\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:13
@@ -170,6 +197,8 @@ msgid ""
 "\\textbf{Starting Resources:} 15 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Startressourcen:} 15 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:31 campaigns/inferno_devilish_plan.tex:41
@@ -307,6 +336,8 @@ msgid ""
 "\\medskip\n"
 "\n"
 msgstr ""
+"\\medskip\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:98
