--- a/translations/what_to_play.tex/de.po
+++ b/translations/what_to_play.tex/de.po
@@ -7,14 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2025-06-22 00:57+0200\n"
-"PO-Revision-Date: 2025-04-14 07:17+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-06-23 13:01+0000\n"
+"Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
+"Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
+"mission-book/sections/what_to_play/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.13-dev\n"
 
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -40,12 +42,14 @@ msgid ""
 "{2}\n"
 "\n"
 msgstr ""
+"{2}\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: sections/what_to_play.tex:3
 msgid "\\addsection{What to Play}{\\images/forgetfulness.png}"
-msgstr ""
+msgstr "\\addsection{Was soll ich spielen?}{\\images/forgetfulness.png}"
 
 #. type: multicols
 #: sections/what_to_play.tex:7
@@ -54,6 +58,8 @@ msgid ""
 "Follow these suggestions if you're not sure which Scenario is best for you.\n"
 "\n"
 msgstr ""
+"Folgt diesen Vorschlägen, wenn ihr nicht sicher seid, welches Szenario für euch am besten geeignet ist.\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:9
@@ -62,6 +68,8 @@ msgid ""
 "\\subsection*{Cooperative Mode}\n"
 "\n"
 msgstr ""
+"\\subsection*{Kooperativer Modus}\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:13
@@ -72,6 +80,10 @@ msgid ""
 "For more tactical play for two players, try \\pagelink{Sentinels}{Sentinels}.\n"
 "\n"
 msgstr ""
+"Wenn ihr das Spiel zum ersten Mal spielt und die \\textbf{Regeln lernen} wollt, beginnt mit \\pagelink{Smaragdinsel}{Smaragdinsel}.\n"
+"Für ein großes Abenteuer für \\textbf{bis zu 6 Fraktionen} mit einem epischen Kampf am Ende, versucht \\pagelink{Festung der Titanen}{Festung der Titanen}.\n"
+"Für ein taktischeres Spiel für zwei Fraktionen, versucht \\pagelink{Wächter}{Wächter}.\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:15
@@ -80,6 +92,8 @@ msgid ""
 "\\subsection*{Clash Mode}\n"
 "\n"
 msgstr ""
+"\\subsection*{Konfliktmodus}\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:19
@@ -90,6 +104,10 @@ msgid ""
 "For an inevitable epic battle between two players with a possible siege, play \\pagelink{Dragoncurse Castle}{Dragoncurse Castle}.\n"
 "\n"
 msgstr ""
+"Wenn ihr ein „Erobere den Gral“-Szenario für 2 oder 4 Fraktionen mit interessanten Wendungen spielen möchtet, versucht es mit \\pagelink{Blutiger Gral}{Blutiger Gral}.\n"
+"Für einen spannenden Bosskampf für 2-3 Fraktionen wählt \\pagelink{Die Jagd}{Die Jagd}.\n"
+"Für einen unvermeidlichen epischen Kampf zwischen zwei Fraktionen mit möglicher Belagerung spielt \\pagelink{Drachenfluch}{Drachenfluch}.\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:21
@@ -98,6 +116,8 @@ msgid ""
 "\\subsection*{Campaign}\n"
 "\n"
 msgstr ""
+"\\subsection*{Kampagne}\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:23
@@ -106,6 +126,8 @@ msgid ""
 "There is a 3-Scenario Inferno \\pagelink{1. A Devilish Plan}{Dungeons and Devils} Campaign at the end if you prefer solo play.\n"
 "\n"
 msgstr ""
+"Am Ende befindet sich eine 3-Szenario Inferno \\pagelink{1. Ein teuflischer Plan}{Dungeons und Teufel} Kampagne, wenn du das Solospiel bevorzugst.\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:25
@@ -114,6 +136,8 @@ msgid ""
 "\\subsection*{Recommendations}\n"
 "\n"
 msgstr ""
+"\\subsection*{Empfehlungen}\n"
+"\n"
 
 #. type: multicols
 #: sections/what_to_play.tex:27
@@ -122,8 +146,10 @@ msgid ""
 "For information regarding your play time, strategizing, and custom rules, check out \\pagelink{Recommendations}{Recommendations} at the end of this book.\n"
 "\n"
 msgstr ""
+"Für Informationen zur Spieldauer, Strategien und speziellen Regeln, siehe \\pagelink{Empfehlungen}{Empfehlungen} am Ende dieses Hefts.\n"
+"\n"
 
 #. type: Plain text
 #: sections/what_to_play.tex:33
 msgid "\\iftoggle{printable}{ \\enlargethispage{2\\baselineskip} }{}"
-msgstr ""
+msgstr "\\enlargethispage{5\\baselineskip}"
